--- a/yejo/src/main/resources/templates/admin/main.html
+++ b/yejo/src/main/resources/templates/admin/main.html
@@ -55,6 +55,46 @@
             font-size: 14px;
             margin-top: 10px;
         }
+		/* 모달 배경 */
+		#modalBackground {
+		  display: none;
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		  background-color: rgba(0, 0, 0, 0.5);
+		  z-index: 1000;
+		}
+
+		/* 모달 창 */
+		#modal {
+		  position: fixed;
+		  top: 50%;
+		  left: 50%;
+		  transform: translate(-50%, -50%);
+		  background: #fff;
+		  padding: 20px;
+		  width: 300px;
+		  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+		  border-radius: 8px;
+		}
+
+		/* 닫기 버튼 */
+		#modal button {
+		  margin-top: 10px;
+		  width: 100%;
+		  padding: 8px;
+		  background-color: #4CAF50;
+		  color: white;
+		  border: none;
+		  border-radius: 4px;
+		  cursor: pointer;
+		}
+
+		#modal button:hover {
+		  background-color: #45a049;
+		}
     </style>
     <script src='/js/admin/login.js?v=1'></script>
 </head>
@@ -62,8 +102,18 @@
     <div class="container">
         <h1>YEJO 인테리어 관리자</h1>
         <input type="password" id="passwordInput" placeholder="패스워드를 입력하세요">
-        <button onclick="checkPassword()">확인</button>
+        <button onclick="checkPassword()">확인</button><br><br>
+		<button type="button" onclick="changePwd()">패스워드 변경</button>
         <div id="errorMessage" class="error"></div>
     </div>
+	
+	<!-- 모달 -->
+	<div id="modalBackground">
+	  <div id="modal">
+	    <label for="newPassword">변경할 패스워드:</label>
+	    <input type="text" id="newPassword" placeholder="새 비밀번호 입력" style="width: 94%; margin-top: 10px; padding: 8px;">
+	    <button type="button" id="confirmChange">변경</button>
+	  </div>
+	</div>
 </body>
 </html>
