--- a/yejo/src/main/resources/templates/admin/estimate.html
+++ b/yejo/src/main/resources/templates/admin/estimate.html
@@ -24,6 +24,7 @@
     <link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 	<script src="/js/estimate.js" defer></script>
 	<script src="/js/admin/estimateRestApi.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body id="page-top">
@@ -94,8 +95,29 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+				
+				
+				<!-- 유입 경로 통계 -->
+				    <div class="card shadow mb-4">
+				        <div class="card-header py-3">
+				            <h6 class="m-0 font-weight-bold text-primary">유입 경로 통계</h6>
+				        </div>
+				        <div class="card-body">
+				            <canvas id="inflowChart" width="400" height="200"></canvas>
+				            <table class="table table-bordered" id="inflowTable" width="100%" cellspacing="0">
+				                <thead>
+				                    <tr>
+				                        <th>유입 경로</th>
+				                        <th>갯수</th>
+				                    </tr>
+				                </thead>
+				                <tbody>
+				                    <!-- 데이터가 JavaScript에서 추가됩니다 -->
+				                </tbody>
+				            </table>
+				        </div>
+				    </div>
             </div>
 
 			<!-- 모달 -->
